# traffic-processing-sdk

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.simple  README.md  docker-compose.simple.yml  docker-compose.yml  run.ps1  run.sh  run_unit_tests.cpp  start.cmd  test-simple.ps1  test-simple.sh  test.ps1  test.sh  test_batching.sh  test_comprehensive.sh  vcpkg.json  watch-logs.ps1  watch-logs.sh
_CPack_Packages/Linux/ZIP/traffic-processing-sdk-0.1.0-Linux-x86_64/include/traffic_processor/: kafka_producer.hpp  sdk.hpp
examples/crow_consumer_demo/: CMakeLists.txt  main.cpp
examples/crow_echo_server/: .env.example  main.cpp
examples/echo_server/: main.cpp
include/traffic_processor/: crow_middleware.hpp  kafka_producer.hpp  sdk.hpp
src/: kafka_producer.cpp  sdk.cpp
tests/: README.md
